add groovy project, add spock test, add makefile, add jvm and maven .mvn configs